--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,3 +32,11 @@ section#telefone{
    
    
 }
+iframe#tela{
+    position: relative;
+    top: 81px;
+    left: 23px;
+    width: 266px;
+    height: 471px;
+
+}
