--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,19 @@ iframe#tela{
     height: 471px;
 
 }
+section#redes-sociais img{
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 5px rgba(95, 2, 95, 0.384);
+}
+section#redes-sociais{
+    text-align: right;
+    
+}
+section#redes-sociais img:hover{
+    border:  2px solid rgb(143, 7, 143);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px;
+}
